Implements product and sales entities.
Adds Product, Sale, and SaleItem entities to the domain model
and database context. This change introduces the necessary
database structure and relationships for managing products
and sales transactions.

- Adds a new migration to create tables for Product, Sale, and SaleItem.
- Configures the database context to use the ORM assembly for migrations.
- Registers the IProductRepository in the ApplicationModuleInitializer.
- Initializes the product activation status upon creation.
- Assigns a new Guid to the Rating Id when creating a product.
- Updates appsettings to use a new database connection.
- Maps the rating properties correctly in the CreateProductProfile.

--- a/template/backend/src/Ambev.DeveloperEvaluation.WebApi/appsettings.Development.json
+++ b/template/backend/src/Ambev.DeveloperEvaluation.WebApi/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=BackendAmbev;Username=postgres;Password=Teste@123"
+  },
+  "Jwt": {
+    "SecretKey": "bXlTdXBlclNlY3JldEtleUZvckpXVFRva1VuR2VuZXJhdGlvbg=="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
